Se añade codificación para que no calcule números negativos

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                         <button class="decrease btn1-d" title="Reducir cantidad">
                                             -
                                         </button>
-                                        <input type="text" class="quantity-value inp-1" id="quantity-value" value="1">
+                                        <input type="text" class="quantity-value inp-1" value="1">
                                         <button class="increase btn1-i">
                                             +
                                         </button>
