Se establece vista responsive para pantalla 425px

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <section class="basket">
                 <div class="header-container">
                     <h2 class="title">
-                        Bolsa de Compras (X productos)
+                        Bolsa de Compras (0 productos)
                     </h2>
                 </div>
 
