Se establece contador de productos

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="principal-container">
             <section class="basket">
                 <div class="header-container">
-                    <h2 class="title">
+                    <h2 class="title products">
                         Bolsa de Compras (0 productos)
                     </h2>
                 </div>
