--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                         <button class="decrease btn1-d" title="Reducir cantidad">
                                             -
                                         </button>
-                                        <input type="text" class="quantity-value inp-1" value="1">
+                                        <input type="number" class="quantity-value inp-1" value="1" min="0">
                                         <button class="increase btn1-i">
                                             +
                                         </button>
@@ -153,7 +153,7 @@
                                         <button class="decrease btn2-d" title="Reducir cantidad">
                                             -
                                         </button>
-                                        <input type="text" class="quantity-value inp-2" id="quantity-value" value="1" readonly>
+                                        <input type="number" class="quantity-value inp-2" id="quantity-value" value="1" readonly>
                                         <button class="increase btn2-i">
                                             +
                                         </button>
@@ -199,7 +199,7 @@
                                         <button class="decrease btn3-d" title="Reducir cantidad">
                                             -
                                         </button>
-                                        <input type="text" class="quantity-value inp-3" id="quantity-value" value="1" readonly>
+                                        <input type="number" class="quantity-value inp-3" id="quantity-value" value="1" readonly>
                                         <button class="increase btn3-i">
                                             +
                                         </button>
@@ -245,7 +245,7 @@
                                         <button class="decrease btn4-d" title="Reducir cantidad">
                                             -
                                         </button>
-                                        <input type="text" class="quantity-value inp-4" id="quantity-value" value="1" readonly>
+                                        <input type="number" class="quantity-value inp-4" id="quantity-value" value="1" readonly>
                                         <button class="increase btn4-i">
                                             +
                                         </button>
@@ -291,7 +291,7 @@
                                         <button class="decrease btn5-d" title="Reducir cantidad">
                                             -
                                         </button>
-                                        <input type="text" class="quantity-value inp-5" id="quantity-value" value="1" readonly>
+                                        <input type="number" class="quantity-value inp-5" id="quantity-value" value="1" readonly>
                                         <button class="increase btn5-i">
                                             +
                                         </button>
@@ -318,7 +318,7 @@
                                     <span class="total">S/ 0.00</span>
                                 </div>
                                 <div class="button-container">
-                                    <button class="btn-buy">
+                                    <button class="btn-buy" onclick="return registrarVenta()">
                                         Ir a comprar
                                     </button>
                                 </div>
