Se corrige detalle de input number

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                         <button class="decrease btn2-d" title="Reducir cantidad">
                                             -
                                         </button>
-                                        <input type="number" class="quantity-value inp-2" id="quantity-value" value="1" readonly>
+                                        <input type="number" class="quantity-value inp-2" id="quantity-value" value="1" min="0">
                                         <button class="increase btn2-i">
                                             +
                                         </button>
@@ -199,7 +199,7 @@
                                         <button class="decrease btn3-d" title="Reducir cantidad">
                                             -
                                         </button>
-                                        <input type="number" class="quantity-value inp-3" id="quantity-value" value="1" readonly>
+                                        <input type="number" class="quantity-value inp-3" id="quantity-value" value="1" min="0">
                                         <button class="increase btn3-i">
                                             +
                                         </button>
@@ -245,7 +245,7 @@
                                         <button class="decrease btn4-d" title="Reducir cantidad">
                                             -
                                         </button>
-                                        <input type="number" class="quantity-value inp-4" id="quantity-value" value="1" readonly>
+                                        <input type="number" class="quantity-value inp-4" id="quantity-value" value="1" min="0">
                                         <button class="increase btn4-i">
                                             +
                                         </button>
@@ -291,7 +291,7 @@
                                         <button class="decrease btn5-d" title="Reducir cantidad">
                                             -
                                         </button>
-                                        <input type="number" class="quantity-value inp-5" id="quantity-value" value="1" readonly>
+                                        <input type="number" class="quantity-value inp-5" id="quantity-value" value="1" min="0">
                                         <button class="increase btn5-i">
                                             +
                                         </button>
