--- a/index.html
+++ b/index.html
@@ -33,37 +33,6 @@
     
     <main class="main">
 
-        <!-- <div class="video">
-            <video src="public/videos/video_index.mp4" autoplay loop></video>
-        </div>
-        <div class="container">
-            <div class="card">
-                <div class="card__img">
-                    <img src="public/images/index/mision.png" alt="misión">
-                </div>
-                <div class="card__text">
-                    <p>Brindar a nuestro clientes la mejor experiencia de compra virtual y además, ofrecerles un servicio totalmente personalizado, desde el trato hasta el producto a elección. De tal manera que consolidemos a Neon Leon Store como una empresa
-                        referente de luces led a nivel nacional ofreciendo experiencias que generen valor y tendencia en la decoración del hogar.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__img">
-                    <img src="public/images/index/vision.png" alt="visión">
-                </div>
-                <div class="card__text">
-                    <p>Posicionarnos como una empresa nacional reconocida en su categoría, a través de los diseños personalizados que ofrecemos.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card__img">
-                    <img src="public/images/index/valores.png" alt="valores">
-                </div>
-                <div class="card__text">
-                    <p>Responsabilidad, exactitud, compromiso, rapidez, veracidad, calidad, innovación y empatía, cualidades las cuales nos representan como una marca transparente y capaz de ofrecer un servicio A1 a todos nuestros clientes y futuros clientes.</p>
-                </div>
-            </div>
-        </div> -->
-
         <div class="principal-container">
             <section class="basket">
                 <div class="header-container">
@@ -117,7 +86,7 @@
                         </form>
                     </section>
 
-                    <!-- Espacio -->
+                    <!-- Espaciado -->
 
                     <section class="basket-item">
                         <form class="item-form" onsubmit="return false">
@@ -163,7 +132,7 @@
                         </form>
                     </section>
 
-                    <!-- Espacio -->
+                    <!-- Espaciado -->
 
                     <section class="basket-item">
                         <form class="item-form" onsubmit="return false">
@@ -209,7 +178,7 @@
                         </form>
                     </section>
 
-                    <!-- Espacio -->
+                    <!-- Espaciado -->
 
                     <section class="basket-item">
                         <form class="item-form" onsubmit="return false">
@@ -255,7 +224,7 @@
                         </form>
                     </section>
 
-                    <!-- Espacio -->
+                    <!-- Espaciado -->
 
                     <section class="basket-item">
                         <form class="item-form" onsubmit="return false">
@@ -305,7 +274,7 @@
                 </section>
 
                 <section class="order-summary">
-                    <div class="order-status">
+                    <div class="order-status-container">
                         <form class="order-status">
                             <div class="title-container">
                                 <h4 class="title">
